--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,16 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      HelloWorld
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content padding class="home">
+  <ion-card>
+      <ion-card-content>
+          Hell {{name}} <br />
+          <button ion-button color="primary" [navPush]="aboutPage">Go to About</button>
+      </ion-card-content>
+  </ion-card>
 </ion-content>
